force-app/main/default/objects/InputCheck__c/InputCheck__c.object-meta.xml
<CustomObject>
    <label>入力チェック</label>
    <nameField>
        <label>対象項目日本語名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>