force-app/main/default/objects/InputCheck__c/fields/InputCheckType__c.field-meta.xml
<CustomField>
    <fullName>InputCheckType__c</fullName>
    <label>入力チェック種類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>