force-app/main/default/objects/InputCheck__c/fields/InputItemAPIName__c.field-meta.xml
<CustomField>
    <fullName>InputItemAPIName__c</fullName>
    <label>対象項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>