force-app/main/default/objects/InputCheck__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>文字数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>